<resources>
    <!-- Welcome string -->
    <string name="app_name">GlucUp-2Date</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT !</string>
    <string name="slide_1_title" translatable="false">GlucUp-2Date!</string>
    <string name="slide_2_title"> The best way to keep track of your diabetes</string>
    <string name="slide_3_title">Keeps track of your records</string>
    <string name="slide_4_title">Module for medical staff</string>
    <string name="welcome_login">Welcome !</string>
    <!-- Login string -->
    <string name="login_document">Document</string>
    <string name="login_password">Password</string>
    <string name="user_no_found">User no found</string>
    <string name="error_field_required">This field is required</string>
    <string name="field_empties">All fields must be filled</string>
    <!-- Home string -->
    <string name="nav_menu1">Records</string>
    <string name="nav_menu2">Graphs</string>
    <string name="nav_menu3">Alarm Manager</string>
    <string name="nav_section">Extras</string>
    <string name="nav_menu4">Help</string>
    <string name="nav_menu5">About</string>
    <string name="nav_menu6">Log Out</string>
    <!-- Activity name -->
    <string name="startactivity">Start</string>
    <string name="loginactivity">Login</string>
    <!-- New Gluc/Search Gluc string -->
    <string name="state">State</string>
    <string name="performer">Performer</string>
    <string name="value_gluc">Value</string>
    <string name="unidades">Units</string>
    <string name="date_newgluc">Date</string>
    <string name="time_newgluc">Time</string>
    <string name="send_newgluc">Send</string>
    <string name="calendar_week_picker_value">Week from %1$s to %2$s</string>
    <string name="radial_time_picker_value" translatable="false">%1$d:%2$d</string>
    <string name="set_actual_time" translatable="false">%1$s:%2$s</string>
    <string name="calendar_date_picker_value" translatable="false">%1$s-%2$s-%3$s</string>
    <string name="pick_day">Choose a day</string>
    <string name="value_filter">Values between:</string>
    <string name="min_value">Min Value</string>
    <string name="max_value">Max Value</string>
    <!-- Personal/Pacient string -->
    <string name="pacient_searchrecord">Search</string>
    <string name="last_issued">Most recent record: %1$s</string>
    <string name="unite1" translatable="false">mmol/l</string>
    <string name="title_pacient_detail">Detail of: </string>
    <string name="detailed">%1$s \n\n Born date: %2$s \n\n Age: %3$s \n\n Blood type: %4$s</string>
    <string name="action_personal_help">Help</string>
    <string name="action_personal_about">About</string>
    <!-- Utilities -->
    <string name="confirm_logout">Are you sure you want logout?</string>
    <string name="logout_confirm">Yes</string>
    <string name="logout_denied">Not</string>
    <string name="error_ok" translatable="false">OK</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="filtrar_por">Filter By</string>
    <string name="swipe">Change</string>
    <string name="show_result">Show Results</string>
    <string name="info_app"> Application developed by GTST, the research group from the University Surcolombiana </string>
    <string name="contributor_app"> Funded by the Vice-Rector of Research and Social Projection</string>
    <!-- Array String -->
    <string-array name="Unidades" translatable="false">
        <item>mmol/l</item>
        <item>mg/dl</item>
    </string-array>
    <string name="filter_day">Day</string>
    <string name="filter_week">Week</string>
    <string name="filter_all">All</string>
    <string-array name="Filtro" translatable="false">
        <item>---</item>
        <item>@string/filter_day</item>
        <item>@string/filter_week</item>
        <item>@string/value_gluc</item>
        <item>@string/filter_all</item>
    </string-array>
    <string name="state_1">Fasting</string>
    <string name="state_2">Before breakfast</string>
    <string name="state_3">After breakfast</string>
    <string name="state_4">Before lunch</string>
    <string name="state_5">After lunch</string>
    <string name="state_6">Before dinner</string>
    <string name="state_7">After dinner</string>
    <string-array name="Estado">
        <item>@string/state_1</item>
        <item>@string/state_2</item>
        <item>@string/state_3</item>
        <item>@string/state_4</item>
        <item>@string/state_5</item>
        <item>@string/state_6</item>
        <item>@string/state_7</item>
    </string-array>


    <string name="play_again_desc" translatable="false">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="title_activity_login">Start</string>

    <string name="title_activity_pacient">Pacient</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_start" translatable="false">StartActivity</string>
    <string name="title_activity_gluc" translatable="false">GlucActivity</string>

    <string name="title_activity_filter" translatable="false">FilterActivity</string>
    <string name="title_activity_date_glucose" translatable="false">DateGlucoseActivity</string>
    <string name="title_activity_week_filter_glucose">Week Values</string>
    <string name="title_pacient_list">Pacientes</string>
    <string name="title_activity_set_alarm" translatable="false">SetAlarmActivity</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="datetime">Now</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="filter_value">Value</string>
    <string name="estado">State</string>
    <string name="mostrar_datos">Show records</string>
    <string name="play_again">Play again</string>
    <string name="check_value">Check the unit and value</string>
    <string name="wrong_value">Something is wrong…</string>
    <string name="send_success">Record send successful !! :}</string>
    <string name="send_fail">Record was not send, try again :{</string>
    <string name="fetching_data">Fetching data…</string>
    <string name="filter_all_data">All records</string>
    <string name="filter_result">Result</string>
    <string name="filter_by_day">Record by day: %1$s</string>
    <string name="filter_record_title">Not records</string>
    <string name="login_check_network">Check Wifi or Data Mobile connection</string>
    <string name="login_check_title">Without network</string>
    <string name="login_issued_server">Error to server connection</string>
    <string name="filter_record_not_found">Not record to filter entry</string>
    <string name="ipserver" translatable="false">http://186.113.30.230:8080/Glucemia/</string>
    <string name="back_filterweek">Back</string>
</resources>
