<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_menu1"
            android:checked="true"/>
        <item
            android:id="@+id/nav_graphic"
            android:icon="@drawable/ic_timeline"
            android:title="@string/nav_menu2" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_alarm"
            android:title="@string/nav_menu3" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_menu4" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_menu5" />
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_web"
            android:title="@string/nav_menu7" />
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_off"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/nav_menu6" />
            </menu>
        </item>
    </group>



</menu>
