<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="magnusdroid.com.glucup_2date.Controler.FilterActivity"
    android:background="@color/primary_light">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtrar_por"
            android:id="@+id/filt_by_txt"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/primary_text" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end"
            android:divider="#624646"
            android:layout_below="@+id/filt_by_txt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_day"
                android:id="@+id/show_by_date"
                android:layout_marginRight="10dp"
                android:textColor="@color/secondary_text" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_week"
                android:id="@+id/show_by_week"
                android:layout_alignTop="@+id/radioGroup"
                android:layout_marginRight="10dp"
                android:textColor="@color/secondary_text" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_gluc"
                android:id="@+id/show_by_value"
                android:layout_marginRight="10dp"
                android:textColor="@color/secondary_text" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_all"
                android:id="@+id/show_all"
                android:layout_marginRight="10dp"
                android:textColor="@color/secondary_text" />
        </RadioGroup>

        <!-- LAYOUT SEMANA -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:id="@+id/semana_layout"
            android:layout_marginTop="24dp"
            android:layout_alignParentStart="true"
            android:visibility="gone">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_day"
                android:id="@+id/btn_week"
                android:textStyle="bold"
                android:background="@color/dot_dark_screen3"
                android:textColor="@color/icons"
                android:layout_marginTop="33dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="52dp"
                android:layout_marginStart="52dp"
                android:layout_alignParentEnd="false" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_week"
                android:id="@+id/week_set"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                android:layout_below="@+id/btn_week"
                android:layout_alignLeft="@+id/btn_week"
                android:layout_alignStart="@+id/btn_week"
                android:layout_marginTop="45dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/in_week"
                android:textColor="@color/primary_text"
                android:layout_below="@+id/btn_week"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="18dp"
                android:visibility="gone" />

        </RelativeLayout>

        <!-- LAYOUT DIA -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:id="@+id/dia_layout"
            android:visibility="gone">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/in_date"
                android:layout_marginTop="82dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/primary_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_day"
                android:id="@+id/btn_date"
                android:textStyle="bold"
                android:background="@color/dot_dark_screen3"
                android:textColor="@color/icons"
                android:layout_alignBottom="@+id/in_date"
                android:layout_toRightOf="@+id/in_date"
                android:layout_toEndOf="@+id/in_date" />

        </RelativeLayout>

        <!-- LAYOUT VALOR -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/value_layout"
            android:visibility="gone"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="42dp"
                android:textColorHint="@color/primary_text"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_marginTop="28dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="42dp"
                android:id="@+id/view3">

                <EditText
                    android:id="@+id/unique_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/filter_value"
                    android:inputType="number|numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/filter_unit_spinner"
                android:spinnerMode="dropdown"
                android:entries="@array/Unidades"
                android:layout_above="@+id/range_value"
                android:layout_toRightOf="@+id/range_value"
                android:layout_toEndOf="@+id/range_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_filter"
                android:id="@+id/range_value"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                android:layout_marginTop="28dp"
                android:layout_below="@+id/view3"
                android:layout_alignLeft="@+id/view3"
                android:layout_alignStart="@+id/view3" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_text"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_marginTop="28dp"
                android:layout_below="@+id/range_value"
                android:layout_alignLeft="@+id/range_value"
                android:layout_alignStart="@+id/range_value"
                android:id="@+id/view4">

            <EditText
                android:id="@+id/min_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/min_value"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:focusable="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_text"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/view4"
                android:layout_alignLeft="@+id/view4"
                android:layout_alignStart="@+id/view4">

                <EditText
                    android:id="@+id/max_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/max_value"
                    android:inputType="number|numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="true" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_result"
            android:id="@+id/btn_show"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="41dp"
            android:background="@drawable/button_default_bg"
            android:visibility="gone" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
