<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controler.PacientActivity"
    android:background="@color/colorPrimary">

    <!-- Information form -->
    <ImageView
        android:layout_width="@dimen/img_width_height"
        android:layout_height="@dimen/img_width_height"
        android:src="@drawable/ic_app"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_1_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:id="@+id/name_app_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_app"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:id="@+id/app_info"
        android:layout_below="@+id/name_app_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp" />

    <TextView
        android:id="@+id/contributor_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contributor_app"
        android:textColor="@color/primary_text"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/app_info"
        android:layout_alignStart="@+id/app_info"
        android:layout_marginBottom="76dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:id="@+id/button_about"
        android:background="@drawable/button_default_bg"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/contributor_info"
        android:layout_alignStart="@+id/contributor_info" />

</RelativeLayout>
