<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary_text"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:id="@+id/view"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/value_gluc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_value"
                android:inputType="number|numberDecimal"
                android:digits="0123456789"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_alignTop="@+id/view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_unid"
            android:layout_below="@+id/view"
            android:entries="@array/Unidades"
            tools:listitem="@android:layout/simple_spinner_item"
            android:layout_toRightOf="@+id/TextView1"
            android:layout_toEndOf="@+id/TextView1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unidades"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/TextView1"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:layout_below="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/TextView2"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:layout_below="@+id/spinner_unid"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_state"
            android:entries="@array/Estado"
            tools:listitem="@android:layout/simple_spinner_item"
            android:layout_alignTop="@+id/TextView2"
            android:layout_toRightOf="@+id/TextView2"
            android:layout_toEndOf="@+id/TextView2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime"
            android:id="@+id/checkBox"
            android:layout_below="@+id/spinner_state"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_text"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:text="19/06/2016"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/checkBox"
            android:layout_toEndOf="@+id/checkBox"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha"
            android:id="@+id/btn_date"
            android:textStyle="bold"
            android:background="@color/dot_dark_screen3"
            android:textColor="@color/icons"
            android:layout_alignBottom="@+id/in_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/in_date"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:text="07:53 PM"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/in_date"
            android:layout_alignLeft="@+id/in_date"
            android:layout_alignStart="@+id/in_date"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/dot_dark_screen3"
            android:textColor="@color/icons"
            android:id="@+id/btn_time"
            android:layout_alignTop="@+id/in_time"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="HORA"
            android:layout_alignBottom="@+id/in_time"
            android:visibility="gone" />


    </RelativeLayout>